--- a/www/js/controllers/main/main.html
+++ b/www/js/controllers/main/main.html
@@ -1,2 +1,4 @@
 <h1>{{ dashboard.breadcrumb }}</h1>
-<ng-map center="41,-87" zoom="3"></ng-map>
+<div>
+    <ng-map center="41,-87" zoom="3"></ng-map>
+</div>
