--- a/www/index.html
+++ b/www/index.html
@@ -12,8 +12,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/AdminLTE.css">
     <link rel="stylesheet" href="css/skin-blue.css">
-
-    <!--<link rel="stylesheet" href="css/style.css"/>-->
 </head>
 
 
@@ -24,7 +22,7 @@
     <header class="main-header">
 
         <!-- Logo -->
-        <a href="index2.html" class="logo">
+        <a href="#" class="logo">
             <!-- mini logo for sidebar mini 50x50 pixels -->
             <span class="logo-mini"><b>A</b>LT</span>
             <!-- logo for regular state and mobile devices -->
@@ -33,10 +31,6 @@
 
         <!-- Header Navbar -->
         <nav class="navbar navbar-static-top" role="navigation">
-            <!-- Sidebar toggle button-->
-            <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
-                <span class="sr-only">Toggle navigation</span>
-            </a>
             <!-- Navbar Right Menu -->
             <div class="navbar-custom-menu">
                 <ul class="nav navbar-nav">
@@ -109,8 +103,8 @@
             <!-- Sidebar Menu -->
             <ul class="sidebar-menu">
                 <!-- Optionally, you can add icons to the links -->
-                <li class="active"><a href="#"><i class="fa fa-link"></i> <span>Link</span></a></li>
-                <li><a href="#"><i class="fa fa-link"></i> <span>Another Link</span></a></li>
+                <li class="active"><a href="#"><i class="fa fa-link"></i> <span>Dashboard</span></a></li>
+                <li><a ui-sref="/organization"><i class="fa fa-link"></i> <span>Organization</span></a></li>
             </ul><!-- /.sidebar-menu -->
         </section>
         <!-- /.sidebar -->
@@ -119,17 +113,11 @@
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
         <!-- Content Header (Page header) -->
-        <section class="content-header">
-            <h1>
-                Page Header
-                <small>Optional description</small>
-            </h1>
-        </section>
 
         <!-- Main content -->
         <section class="content">
 
-            <div ui-view></div>
+            <ui-view/>
 
         </section><!-- /.content -->
     </div><!-- /.content-wrapper -->
@@ -142,6 +130,7 @@
 <script src="assets/lib/ngmap/build/scripts/ng-map.min.js"></script>
 <script src="http://maps.google.com/maps/api/js"></script>
 <script src="js/app.js"></script>
-<script src="js/controllers/dashboard-controller.js"></script>
+<script src="js/dashboard/controller/dashboard-controller.js"></script>
+<script src="js/organization/controller/organization-controller.js"></script>
 </body>
 </html>
