--- a/www/index.html
+++ b/www/index.html
@@ -39,7 +39,7 @@
                     <!-- User Account Menu -->
                     <li class="dropdown user user-menu">
                         <!-- Menu Toggle Button -->
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        <a ui-sref="/profile" class="dropdown-toggle" data-toggle="dropdown">
                             <!-- The user image in the navbar-->
                             <img src="css/user2-160x160.jpg" class="user-image" alt="User Image">
                             <!-- hidden-xs hides the username on small devices so only the image appears. -->
@@ -87,18 +87,6 @@
         <!-- sidebar: style can be found in sidebar.less -->
         <section class="sidebar">
 
-            <!-- Sidebar user panel (optional) -->
-            <div class="user-panel">
-                <div class="pull-left image">
-                    <img src="css/user2-160x160.jpg" class="img-circle" alt="User Image">
-                </div>
-                <div class="pull-left info">
-                    <p>Alexander Pierce</p>
-                    <!-- Status -->
-                    <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
-                </div>
-            </div>
-
 
             <!-- Sidebar Menu -->
             <ul class="sidebar-menu">
@@ -129,8 +117,6 @@
 <script src="assets/lib/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script src="assets/lib/ngmap/build/scripts/ng-map.min.js"></script>
 <script src="http://maps.google.com/maps/api/js"></script>
-<script src="js/app.js"></script>
-<script src="js/dashboard/controller/dashboard-controller.js"></script>
-<script src="js/organization/controller/organization-controller.js"></script>
+<script src="compiled/angular-compiled.js"></script>
 </body>
 </html>
