--- a/www/index.html
+++ b/www/index.html
@@ -93,6 +93,7 @@
                 <!-- Optionally, you can add icons to the links -->
                 <li class="active"><a href="#"><i class="fa fa-link"></i> <span>Dashboard</span></a></li>
                 <li><a ui-sref="/organization"><i class="fa fa-link"></i> <span>Organization</span></a></li>
+                <li><a ui-sref="/organization/create"><i class="fa fa-link"></i> <span>Organization create</span></a></li>
             </ul><!-- /.sidebar-menu -->
         </section>
         <!-- /.sidebar -->
