--- a/www/index.html
+++ b/www/index.html
@@ -39,7 +39,7 @@
                     <!-- User Account Menu -->
                     <li class="dropdown user user-menu">
                         <!-- Menu Toggle Button -->
-                        <a ui-sref="/profile" class="dropdown-toggle" data-toggle="dropdown">
+                        <a ui-sref="profile" class="dropdown-toggle" data-toggle="dropdown">
                             <!-- The user image in the navbar-->
                             <img src="css/user2-160x160.jpg" class="user-image" alt="User Image">
                             <!-- hidden-xs hides the username on small devices so only the image appears. -->
@@ -92,8 +92,8 @@
             <ul class="sidebar-menu">
                 <!-- Optionally, you can add icons to the links -->
                 <li class="active"><a href="#"><i class="fa fa-link"></i> <span>Dashboard</span></a></li>
-                <li><a ui-sref="/organization"><i class="fa fa-link"></i> <span>Organization</span></a></li>
-                <li><a ui-sref="/organization/create"><i class="fa fa-link"></i> <span>Organization create</span></a></li>
+                <li><a ui-sref="organization"><i class="fa fa-link"></i> <span>Organization</span></a></li>
+                <li><a ui-sref="organizationCreate"><i class="fa fa-link"></i> <span>Organization create</span></a></li>
             </ul><!-- /.sidebar-menu -->
         </section>
         <!-- /.sidebar -->
@@ -101,7 +101,6 @@
 
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
-        <!-- Content Header (Page header) -->
 
         <!-- Main content -->
         <section class="content">
