--- a/www/index.html
+++ b/www/index.html
@@ -77,7 +77,7 @@
 <script src="assets/lib/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script src="assets/lib/angular-local-storage/dist/angular-local-storage.js"></script>
 <script src="assets/lib/ngmap/build/scripts/ng-map.min.js"></script>
-<script src="http://maps.google.com/maps/api/js"></script>
+<script src="https://maps.google.com/maps/api/js?libraries=placeses,visualization,drawing,geometry,places"></script>
 <script src="compiled/angular-compiled.js"></script>
 </body>
 </html>
