--- a/www/index.html
+++ b/www/index.html
@@ -53,7 +53,7 @@
             <ul class="sidebar-menu">
                 <!-- Optionally, you can add icons to the links -->
                 <li class="active"><a ui-sref="dashboard"><i class="fa fa-link"></i> <span>Dashboard</span></a></li>
-                <li><a ui-sref="organizationCreate"><i class="fa fa-link"></i> <span>Organization create</span></a></li>
+                <li><a ui-sref="organizationCreate"><i class="fa fa-link"></i> <span>Add Charity</span></a></li>
             </ul><!-- /.sidebar-menu -->
         </section>
         <!-- /.sidebar -->
